--- a/app/src/main/res/layout/activity_agregar_cliente.xml
+++ b/app/src/main/res/layout/activity_agregar_cliente.xml
@@ -11,6 +11,19 @@
     tools:context=".AgregarCliente">
 
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+
+
     <ImageView
         android:id="@+id/img_cliente_agregar"
         android:layout_width="56dp"
@@ -208,5 +221,8 @@
 
     </LinearLayout>
 
+
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
