--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -141,7 +141,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="144dp"
         android:layout_marginTop="8dp"
-        android:src="@drawable/ic_add_black_24dp"
+        android:src="@drawable/ic_person_add_black_24dp"
+        app:backgroundTint="?attr/colorError"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.906"
