--- a/app/src/main/res/layout/activity_second_.xml
+++ b/app/src/main/res/layout/activity_second_.xml
@@ -38,7 +38,7 @@
                 android:id="@+id/tabItem"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Registro de Cargas" />
+                android:text="Cargas y Desargas" />
 
             <android.support.design.widget.TabItem
                 android:id="@+id/tabItem2"
@@ -46,11 +46,6 @@
                 android:layout_height="wrap_content"
                 android:text="Clientes" />
 
-            <android.support.design.widget.TabItem
-                android:id="@+id/tabItem3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/tab_text_3" />
 
         </android.support.design.widget.TabLayout>
 
