--- a/app/src/main/res/layout/fragment_registro__ventas_.xml
+++ b/app/src/main/res/layout/fragment_registro__ventas_.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#304ffe"
-        android:text="Cargas y Descargas"
+        android:text="Envases"
         android:textAlignment="center"
         android:textColor="#FFF"
         android:textSize="24sp"
@@ -35,7 +35,7 @@
             android:id="@+id/total_cargas_ventas"
             android:layout_width="230dp"
             android:layout_height="wrap_content"
-            android:text="Total_Cargas:"
+            android:text="Total Cargas:"
             android:textAlignment="center"
             android:textColor="#000"
             android:textSize="20sp"
@@ -76,7 +76,7 @@
                 android:id="@+id/total_descargas_ventas"
                 android:layout_width="230dp"
                 android:layout_height="wrap_content"
-                android:text="Total_Descargas:"
+                android:text="Total Descargas:"
                 android:textAlignment="center"
                 android:textColor="#000"
                 android:textSize="20sp"
@@ -104,7 +104,7 @@
                 android:id="@+id/total_recuento_envases_ventas"
                 android:layout_width="230dp"
                 android:layout_height="wrap_content"
-                android:text="Recuento_Envases:"
+                android:text="Recuento Envases:"
                 android:textAlignment="center"
                 android:textColor="#000"
                 android:textSize="20sp"
@@ -135,7 +135,7 @@
                 android:id="@+id/total_envases_rotos_ventas"
                 android:layout_width="230dp"
                 android:layout_height="wrap_content"
-                android:text="Total_Envases_Rotos:"
+                android:text="Total Envases Rotos:"
                 android:textAlignment="center"
                 android:textColor="#000"
                 android:textSize="20sp"
@@ -255,7 +255,7 @@
                 android:layout_width="230dp"
                 android:layout_height="wrap_content"
                 android:background="#FFF"
-                android:text="Total_Disp.Plasticos:"
+                android:text="Total Disp.Plasticos:"
                 android:textAlignment="center"
                 android:textColor="#000"
                 android:textSize="20sp"
@@ -289,7 +289,7 @@
                 android:layout_width="230dp"
                 android:layout_height="wrap_content"
                 android:background="#FFF"
-                android:text="Total_Disp.Electricos:"
+                android:text="Total Disp.Electricos:"
                 android:textAlignment="center"
                 android:textColor="#000"
                 android:textSize="20sp"
@@ -322,7 +322,7 @@
                 android:layout_width="230dp"
                 android:layout_height="wrap_content"
                 android:background="#FFF"
-                android:text="Total_Canillas:"
+                android:text="Total Canillas:"
                 android:textAlignment="center"
                 android:textColor="#000"
                 android:textSize="20sp"
@@ -355,7 +355,7 @@
                 android:layout_width="230dp"
                 android:layout_height="wrap_content"
                 android:background="#FFF"
-                android:text="Total_Envases_Vendidos:"
+                android:text="Total Envases Vendidos:"
                 android:textAlignment="center"
                 android:textColor="#000"
                 android:textSize="20sp"
