--- a/app/src/main/res/layout/item_clientes.xml
+++ b/app/src/main/res/layout/item_clientes.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:id="@+id/clientes_item_id"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/clientes_item_id">
-    
+    android:layout_marginTop="10dp"
+    android:orientation="horizontal">
+
     <ImageView
+        android:id="@+id/img_cliente"
         android:layout_width="56dp"
         android:layout_height="56dp"
-        android:src="@mipmap/ic_launcher_round"
-        android:id="@+id/img_cliente"/>
+        android:src="@mipmap/ic_launcher_round" />
 
 
     <LinearLayout
@@ -24,6 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Apellido del Cliente"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
 
@@ -32,6 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Nombre del Cliente"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
 
@@ -51,18 +54,14 @@
     </LinearLayout>
 
 
-    
     <LinearLayout
 
-        android:gravity="end"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-       
+        android:layout_height="match_parent"
+        android:gravity="end">
 
 
     </LinearLayout>
-    
 
-    
 
 </LinearLayout>
