--- a/app/src/main/res/layout/activity_ventas_.xml
+++ b/app/src/main/res/layout/activity_ventas_.xml
@@ -185,23 +185,16 @@
                 android:orientation="horizontal">
 
 
-                <Button
-                    android:id="@+id/btn_agregar_nuevo_articulo_ventas"
-                    android:layout_width="60dp"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_add_black_24dp" />
-
-
                 <Spinner
                     android:id="@+id/lista_productos_ventas"
-                    android:layout_width="160dp"
+                    android:layout_width="200dp"
                     android:layout_height="40dp"
                     android:text="Artículos"
                     android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/cantidad_productos_ventas"
-                    android:layout_width="150dp"
+                    android:layout_width="160dp"
                     android:layout_height="40dp"
                     android:layout_margin="@dimen/appbar_padding_top"
                     android:layout_marginTop="10dp"
@@ -215,6 +208,99 @@
 
             </LinearLayout>
 
+
+
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:orientation="horizontal">
+
+
+               <Spinner
+                   android:id="@+id/lista2_productos_ventas"
+                   android:layout_width="200dp"
+                   android:layout_height="40dp"
+                   android:text="Artículos"
+                   android:textStyle="bold" />
+
+               <EditText
+                   android:id="@+id/cantidad2_productos_ventas"
+                   android:layout_width="160dp"
+                   android:layout_height="40dp"
+                   android:layout_margin="@dimen/appbar_padding_top"
+                   android:layout_marginTop="10dp"
+                   android:cursorVisible="false"
+                   android:drawablePadding="0dp"
+                   android:enabled="false"
+                   android:inputType="number"
+                   android:padding="0dp"
+                   android:textStyle="bold" />
+
+
+           </LinearLayout>
+
+
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:orientation="horizontal">
+
+
+               <Spinner
+                   android:id="@+id/lista3_productos_ventas"
+                   android:layout_width="200dp"
+                   android:layout_height="40dp"
+                   android:text="Artículos"
+                   android:textStyle="bold" />
+
+               <EditText
+                   android:id="@+id/cantidad3_productos_ventas"
+                   android:layout_width="160dp"
+                   android:layout_height="40dp"
+                   android:layout_margin="@dimen/appbar_padding_top"
+                   android:layout_marginTop="10dp"
+                   android:cursorVisible="false"
+                   android:drawablePadding="0dp"
+                   android:enabled="false"
+                   android:inputType="number"
+                   android:padding="0dp"
+                   android:textStyle="bold" />
+
+
+           </LinearLayout>
+
+
+
+
+
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:orientation="horizontal">
+
+
+               <Spinner
+                   android:id="@+id/lista4_productos_ventas"
+                   android:layout_width="200dp"
+                   android:layout_height="40dp"
+                   android:text="Artículos"
+                   android:textStyle="bold" />
+
+               <EditText
+                   android:id="@+id/cantidad4_productos_ventas"
+                   android:layout_width="160dp"
+                   android:layout_height="40dp"
+                   android:layout_margin="@dimen/appbar_padding_top"
+                   android:layout_marginTop="10dp"
+                   android:cursorVisible="false"
+                   android:drawablePadding="0dp"
+                   android:enabled="false"
+                   android:inputType="number"
+                   android:padding="0dp"
+                   android:textStyle="bold" />
+
+
+           </LinearLayout>
 
            <LinearLayout
                 android:layout_width="match_parent"
