Se comprobó que la venta se registra Se añadió una clase artículo Se añadió la clase VerificarCorregir. Tiene un método para trabajar los editText Al iniciar la clase se carga un arrayList con todos los artículos. Esto es un paso más para la interfaz gráfica dinámica. El saldo muestra el valor que hay que pagar

--- a/app/src/main/res/layout/activity_ventas_.xml
+++ b/app/src/main/res/layout/activity_ventas_.xml
@@ -352,6 +352,7 @@
                     android:layout_width="170dp"
                     android:layout_height="40dp"
                     android:layout_marginStart="10dp"
+                    android:textSize="18sp"
                     android:textStyle="bold" />
 
 
