--- a/app/src/main/res/layout/nueva_entrega_retiro_patrocinio.xml
+++ b/app/src/main/res/layout/nueva_entrega_retiro_patrocinio.xml
@@ -108,7 +108,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="left"
-                        android:text="Entrega"
+                        android:text="Retiro"
                         android:textColor="#FFFF"
                         android:textSize="15sp" />
 
