--- a/app/src/main/res/drawable-anydpi/ic_fab_nuevo_responsable.xml
+++ b/app/src/main/res/drawable-anydpi/ic_fab_nuevo_responsable.xml
@@ -3,9 +3,8 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#64DD17"
-    android:alpha="0.8">
+    android:tint="#FFFFFF">
     <path
         android:fillColor="#FF000000"
-        android:pathData="M4,12l1.41,1.41L11,7.83V20h2V7.83l5.58,5.59L20,12l-8,-8 -8,8z"/>
+        android:pathData="M15,12c2.21,0 4,-1.79 4,-4s-1.79,-4 -4,-4 -4,1.79 -4,4 1.79,4 4,4zM6,10L6,7L4,7v3L1,10v2h3v3h2v-3h3v-2L6,10zM15,14c-2.67,0 -8,1.34 -8,4v2h16v-2c0,-2.66 -5.33,-4 -8,-4z"/>
 </vector>
