--- a/app/src/main/res/layout/content_entrega_retiro_envases_patrocinio.xml
+++ b/app/src/main/res/layout/content_entrega_retiro_envases_patrocinio.xml
@@ -75,8 +75,8 @@
                     android:layout_height="wrap_content"
                     android:background="#ff9800"
                     android:orientation="horizontal"
-                    android:weightSum="2"
-                    tools:visibility="visible">
+                    tools:visibility="visible"
+                    android:weightSum="2">
 
 
                     <TextView
@@ -95,7 +95,7 @@
                         android:id="@+id/img_entrega_erep"
                         android:layout_width="30dp"
                         android:layout_height="wrap_content"
-                        tools:src="@drawable/ic_carga" />
+                        android:src="@drawable/ic_carga" />
 
                     <TextView
                         android:id="@+id/entrega_erep"
@@ -113,7 +113,7 @@
                         android:id="@+id/img_retiro_erep"
                         android:layout_width="30dp"
                         android:layout_height="wrap_content"
-                        tools:src="@drawable/ic_descarga" />
+                        android:src="@drawable/ic_descarga" />
 
                     <TextView
                         android:id="@+id/retiro_erep"
@@ -152,7 +152,7 @@
                             android:layout_width="40dp"
                             android:layout_height="wrap_content"
                             android:background="@android:color/transparent"
-                            tools:src="@drawable/ic_add_new_art" />
+                            android:src="@drawable/ic_add_new_art" />
 
                         <Spinner
 
