Combustible add Spinner
Se agrego un nuvo item al spinner

--- a/app/src/main/res/layout/content_cargas_descargas.xml
+++ b/app/src/main/res/layout/content_cargas_descargas.xml
@@ -179,6 +179,7 @@
                             android:id="@+id/edtx_descarga"
                             android:layout_width="95dp"
                             android:layout_height="wrap_content"
+                            android:cursorVisible="true"
                             android:gravity="center"
                             android:hint="Cantidad"
                             android:imeOptions="actionNext"
