--- a/app/src/main/res/layout/content_cargas_descargas.xml
+++ b/app/src/main/res/layout/content_cargas_descargas.xml
@@ -9,7 +9,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:fillViewport="true"
+
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
+
     tools:context=".Cargas_Descargas"
     tools:showIn="@layout/activity_cargas_descargas">
 
@@ -34,9 +36,8 @@
                 android:id="@+id/llv_contenedor_para_bordes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/borde_linear_layout"
                 android:orientation="vertical">
-                <!--android:background="@drawable/borde_linear_layout"-->
-
 
 
                 <!--#################################################-->
@@ -177,7 +178,6 @@
                         <EditText
 
                             android:id="@+id/edtx_descarga"
-                            style="@style/Widget.AppCompat.EditText"
                             android:layout_width="95dp"
                             android:layout_height="wrap_content"
                             android:gravity="center"
