--- a/app/src/main/res/layout/activity_combustible_estadisticas.xml
+++ b/app/src/main/res/layout/activity_combustible_estadisticas.xml
@@ -12,6 +12,25 @@
     tools:context=".CombustibleEstadisticas">
 
 
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="#d50000"
+        app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+
+    </android.support.design.widget.AppBarLayout>
+
+
+
+
     <FrameLayout
 
         android:id="@+id/contenedor_para_fragment"
