Borde_linear_layout  y Spinner_style usados con EXITO
Ambos recursos fueron implementados en las activitys correspondientes: borde_linear_layout en las activitys de CARGA_DESCARGA y EntregaRetiroEnvasesPatrocionio. Mientras que spinner_style en la activity de RealizarVentasClienteSupervisor

--- a/app/src/main/res/drawable/spinner_style.xml
+++ b/app/src/main/res/drawable/spinner_style.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"   android:shape="rectangle">
+<shape
 
-
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
 
 
 
@@ -16,8 +17,6 @@
         android:bottom="1dp"/>
 
     <corners android:radius="50dp"/>
-
-
 
 
 
