--- a/app/src/main/res/layout/activity_realizar_ventas_clientes_supervisor.xml
+++ b/app/src/main/res/layout/activity_realizar_ventas_clientes_supervisor.xml
@@ -183,8 +183,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:orientation="horizontal">
-                        <!--android:background="@drawable/spinner_style"-->
+                            android:orientation="horizontal"
+                            android:background="@drawable/spinner_style">
 
 
                             <Spinner
