--- a/app/src/main/res/layout/nueva_entrega_retiro_patrocinio.xml
+++ b/app/src/main/res/layout/nueva_entrega_retiro_patrocinio.xml
@@ -23,9 +23,9 @@
                 android:id="@+id/llv_contenedor_para_bordes_erep"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:background="@drawable/borde_linear_layout">
 
-                <!--android:background="@drawable/borde_linear_layout"-->
 
 
                 <!--#################################################-->
