--- a/app/src/main/res/layout/nueva_tanda.xml
+++ b/app/src/main/res/layout/nueva_tanda.xml
@@ -37,7 +37,8 @@
                 android:id="@+id/llv_contenedor_para_bordes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:background="@drawable/borde_linear_layout">
 
 
 
