--- a/app/src/main/res/layout/content_entrega_retiro_envases_patrocinio.xml
+++ b/app/src/main/res/layout/content_entrega_retiro_envases_patrocinio.xml
@@ -31,7 +31,7 @@
 
             android:id="@+id/layout_vertical_erep"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_height="500dp"
             android:orientation="vertical">
 
             <LinearLayout
@@ -39,8 +39,8 @@
                 android:id="@+id/llv_contenedor_para_bordes_erep"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:background="@drawable/borde_linear_layout">
+                android:background="@drawable/borde_linear_layout"
+                android:orientation="vertical">
 
 
                 <!--#################################################-->
@@ -76,8 +76,9 @@
                     android:layout_height="wrap_content"
                     android:background="#ff9800"
                     android:orientation="horizontal"
-                    tools:visibility="visible"
-                    android:weightSum="2">
+                    android:weightSum="2"
+                    tools:visibility="visible">
+
 
 
                     <TextView
@@ -91,12 +92,16 @@
                         android:textSize="15sp" />
 
 
+
+
                     <ImageView
 
                         android:id="@+id/img_entrega_erep"
                         android:layout_width="30dp"
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_carga" />
+
+
 
                     <TextView
                         android:id="@+id/entrega_erep"
@@ -109,12 +114,15 @@
                         android:textSize="15sp" />
 
 
+
                     <ImageView
 
                         android:id="@+id/img_retiro_erep"
                         android:layout_width="30dp"
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_descarga" />
+
+
 
                     <TextView
                         android:id="@+id/retiro_erep"
@@ -146,6 +154,7 @@
                         android:layout_height="match_parent"
                         android:orientation="horizontal"
                         android:weightSum="1">
+
 
                         <ImageButton
 
@@ -188,18 +197,16 @@
                             android:imeOptions="actionNext"
                             android:inputType="number" />
 
+
+
+
                     </LinearLayout>
-
-
-
 
 
                 </LinearLayout> <!--Fin del "layout_vertical_tercer_tupla"-->
 
 
                 <!--#######################################################################-->
-
-
 
 
             </LinearLayout> <!--Fin del llv_contenedor_para_bordes-->
