--- a/app/src/main/res/menu/menu_entrega_retiro_envases_patrocinio.xml
+++ b/app/src/main/res/menu/menu_entrega_retiro_envases_patrocinio.xml
@@ -22,4 +22,13 @@
 
 
 
+    <item
+        android:id="@+id/action_finish_evento"
+        android:orderInCategory="100"
+        android:title="@string/action_finish_evento"
+        app:showAsAction="never" />
+
+
+
+
 </menu>
